--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/brand/assets/icon/dark/leger-icon-dark.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leger - Secret Management & Release Tracking</title>
     <meta name="description" content="Manage API secrets and track deployment releases for your Leger infrastructure" />
